--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header class="header">
     <div class="left-section">
-      <img class="hamburger-menu" src="/images/hamburger-menu.svg" alt="">
-      <img class="youtube-logo" src="/images/youtube-logo.svg" alt="">
+      <img class="hamburger-menu" src="images/hamburger-menu.svg" alt="">
+      <img class="youtube-logo" src="images/youtube-logo.svg" alt="">
     </div>
     <div class="middle-section">
       <input class="search-bar" type="text" placeholder="Search">
